[package]
name = "particle_accelerator"
version = "0.1.0"
authors = ["liubin <lb15389415660@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3", default-features = false }
sqlite = "0.26.0"